feat: Implement new cyberpunk UI theme, refine core game logic, and add comprehensive backend tests.